created github route, and keys for app

--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,3 +1,5 @@
 <%= link_to "Log In with Facebook", '/auth/facebook'%>
 
 localhost:3000/auth/facebook 
+
+<%= link_to "Log In with GitHub", '/auth/github'%>
