--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,11 +1,14 @@
 <h1>Create Account</h1>
 
 <%=form_for @user do |f| %>
-<label> Name: </label><br>
-<%= f.text_field :name %>
-<label> Email: </label><br>
-<%= f.text_field :email %>
-<label> Password: </label><br>
-<%= f.text_field :password %>
-<%= f.submit %>
+<label> Name: </label>
+<%= f.text_field :name %><br>
+<label> Email: </label>
+<%= f.text_field :email %><br>
+<label> Password: </label>
+<%= f.password_field :password %><br>
+<label> Password Confirmation: </label>
+<%= f.password_field :password_confirmation %><br>
+
+<%= f.submit 'Submit'%>
 <% end %>
