--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,7 +1,12 @@
+<h1>Welcome to Ordinary Startups  </h1>
+<p>The world of high tech startups, ingenious solutions and avant-garde technology for ordinary every day</p>  
+
+<h2>Login</h2>
+
+<%= render 'sessions/form' %>
+
 <%= link_to "Log In with Facebook", '/auth/facebook'%>
 
- 
+ <%= link_to "Log In with GitHub", '/auth/github'%>
 
-<%= link_to "Log In with GitHub", '/auth/github'%>
-
-
+<%= button_to "Logout", controller: "sessions", action: "destroy" %>
