finished categories, new and index views

--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,5 +1,10 @@
 <h1>Welcome to Ordinary Startups  </h1>
 <p>The world of high tech startups, ingenious solutions and avant-garde technology for ordinary every day</p>  
+<h1>Innovative Startups</h1>
+
+
+
+
 
 <h2>Login</h2>
 
@@ -10,3 +15,4 @@
  <%= link_to "Log In with GitHub", '/auth/github'%>
 
 <%= button_to "Logout", controller: "sessions", action: "destroy" %>
+
