--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,3 +1,12 @@
 <h1>Innovative Startups</h1>
 
-<% @category.each do |category| %>
+<% @categories.each do |category| %>
+<li><%= link_to category.name, category %></li>
+<ul>
+<% category.startups.each do |startup| %>
+<li><%= startup.company %> <%= startup.innovation %>, <%= startup.product %>, <%= startup.location %></li>
+<% end %>
+
+</ul>
+
+<% end %>
