--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,6 +1,9 @@
+<h1>Create a New Category</h1>
 <%= form_for @category do |f| %>
 <%= f.label :name %>
-<%= f.text_field :name %><br>
+<%= f.text_field :name %><br />
+
+<%= f.select :name, options_for_names, :prompt => "Select One" %>
 
 <%= f.fields_for :startups do |s| %>
 <%= s.label :company %>
@@ -10,7 +13,7 @@
 <%= s.text_field :innovation %><br>
 
 <%= s.label :product %>
-<%= s.text_field :product %><br>
+<%= s.check_box :product %><br>
 
 <%= s.label :location %>
 <%= s.text_field :location %><br>
