created layout view and helper method for category select

--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to Ordinary Startups  </h1>
-<p>The world of high tech startups, ingenious solutions and avant-garde technology for ordinary every day</p>  
-<h1>Innovative Startups</h1>
+<h2>Discover innovative solutions and avant-garde technology in the world of high tech startups. </h2>  
+
 
 
 
@@ -9,6 +9,8 @@
 <h2>Login</h2>
 
 <%= render 'sessions/form' %>
+
+<%= link_to "Sign Up", controller: "users", action: "new" %>
 
 <%= link_to "Log In with Facebook", '/auth/facebook'%>
 
