--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,24 @@
   </head>
 
   <body>
+  <header class="navbar navbar-inverse">
+  <div class="navbar-class">
+  <div class="container">
+  
+  
+  <ul class="nav navbar-nav">
+  <li class="active"><a href="/">Home</a></li>
+  <li><%= link_to "Sign Up", controller: "users", action: "new" %></li>
+  <li><%= link_to "Startups", startups_path %></li>
+  <li><%= link_to "New Startups", new_startup_path %></li>
+  <li><%= link_to "Startups by Categories", categories_path %></li>
+  <li><%= link_to "Create a New Category", new_category_path %></li>
+  
+    </ul>
+    
+   </div>
+   </div>
+   </header>    
     <%= yield %>
   </body>
 </html>
