--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,1 +1,8 @@
-<%=link_to "Enter Your Startup", new_category_startup_path %>
+<h1><%= @category.name %></h1>
+
+<%=link_to "Enter Your Startup", new_category_startup_path(@category) %>
+
+<p>Startups:</p>
+<% @category.startups.each do |startup| %>
+<div><%= startup.company %></div>
+<% end %>
