--- a/app/views/startups/_form.html.erb
+++ b/app/views/startups/_form.html.erb
@@ -1,9 +1,12 @@
 <h1>Enter Your Startup</h1>
 
 <%= form_for @startup do |f| %>
+<%= category_id_field(@startup) %>
 <br>
 
 <%= f.label :company %>
+
+
 <%= f.text_field :company %>
 
 <%= f.label :innovation %>
@@ -12,7 +15,7 @@
 <%= f.check_box :product %>
 <%= f.label :location %>
 <%= f.text_field :location %>
-<%= f.hidden_field :category_id %>
+<%#= f.hidden_field :category_id %>
 <%= f.hidden_field :user_id %>
 <%= f.select :name, options_for_names, :prompt => "Select One" %>   
 <%= f.fields_for :categories do |cat| %>
