--- a/app/views/startups/show.html.erb
+++ b/app/views/startups/show.html.erb
@@ -1,3 +1,5 @@
 <h1><%= @startup.company %></h1>
 <p>in <%= link_to @startup.category.name, category_path(@startup.category) if @startup.category %> (<%= link_to "Edit Startup", edit_category_startup_path(@startup.category, @startup) if @startup.category %>)</p>
 <p><%= @startup.innovation %></p>
+<p><%= @startup.product %></p>
+<p><%= @startup.location %></p>
