updated categories_controller, removed edit, update methods

--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -16,5 +16,5 @@
 
  <%= link_to "Log In with GitHub", '/auth/github'%>
 
-<%= button_to "Logout", controller: "sessions", action: "destroy" %>
+<%#= button_to "Logout", controller: "sessions", action: "destroy" %>
 
