added validations and error messages to users/new, startups/new, categories/new

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -23,3 +23,9 @@
 <%= f.submit %>
 
 <% end %>
+
+<% if @category && @category.errors.any? %>
+    <% @category.errors.full_messages.each do |m| %>
+        <p style="color: red;"><%= m %></p>
+    <% end %>
+<% end %>
