added scope :search method, removed accepts nested attributes, f.fields from the form and attributes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
   
-  
+  <div class="wrapper">
   
   <% if current_user %>
   <ul class="nav navbar-nav">
@@ -27,7 +27,7 @@
     
    
    
-     
+     </div>
     <%= yield %>
   </body>
 </html>
