--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -10,3 +10,9 @@
 </ul>
 
 <% end %>
+
+<%= form_tag categories_path, :method => "get" do %>
+<%= label_tag(:search, "Search Startups by Category:") %>
+<%= text_field_tag :search %>
+<%= submit_tag("Search") %>
+<% end %>
