--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,5 @@
-<h1>Welcome</h1>
+<h3>All Users</h3>
+<% @users.each do |user| %>
+<li> <%= link_to "Users", users_path%></li>
+<%#=user.id%><%#= user.name %> 
+<% end %>
