--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,12 @@
-<h1>Welcome</h1> 
+<h3><%= @user.name %></h3>
+<ul>
+<% @startups.each do |startup| %>
+<li><%= link_to "Innovative Startups", startups_path %></li>
+<%#=startup.id%><%#= startup.company %>>
+<% end %>
+</ul>
+
 <% if current_user %>
-<%= link_to "delete account", controller: "users", action: "destroy" %>
+<%= link_to "delete account", @user, method: :delete %>
 <% end %>
 <%#= button_to "Logout", controller: "sessions", action: "destroy" %>
