--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,9 @@
 <h3>All Users</h3>
-<% @users.each do |user| %>
-<li> <%= link_to "Users", users_path%></li>
-<%#=user.id%><%#= user.name %> 
+<% if current_user %>
+<ul>
+<% @users.each do |user| %> 
+<li><%=link_to user.name, user_path(user)%></li>
 <% end %>
+</ul>
+<% end %>
+
