added users/show nested route to show startups for that user

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,5 +4,5 @@
 
 <p>Startups:</p>
 <% @category.startups.each do |startup| %>
-<div><%= startup.company %></div>
+<div><%= link_to startup.company, startup_path(startup) %></div>
 <% end %>
