--- a/app/views/startups/_form.html.erb
+++ b/app/views/startups/_form.html.erb
@@ -15,6 +15,10 @@
 <%= f.text_field :location %>
 
 <%= f.hidden_field :user_id %>
+<%= f.fields_for :categories do |c| %>
+  <%= c.label :name %>
+  <%= c.text_field :name %>
+  <% end %>
  
 <br />
 <%= f.submit 'Submit'%>
