--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,20 +1,24 @@
 <h1>Welcome to Ordinary Startups  </h1>
 <h2>Discover innovative solutions and avant-garde technology in the world of high tech startups. </h2>  
 
+<h1>World of Startups</h1>
+
+
+<%#= background-image: url('img_2'.jpg) %>
 
 
 
 
 
-<h2>Login</h2>
 
-<%= render 'sessions/form' %>
 
-<%= link_to "Sign Up", controller: "users", action: "new" %>
+<%#= render 'sessions/form' %>
 
-<%= link_to "Log In with Facebook", '/auth/facebook'%>
+<%#= link_to "Sign Up", controller: "users", action: "new" %>
 
- <%= link_to "Log In with GitHub", '/auth/github'%>
+<%#= link_to "Log In with Facebook", '/auth/facebook'%>
+
+ <%#= link_to "Log In with GitHub", '/auth/github'%>
 
 <%#= button_to "Logout", controller: "sessions", action: "destroy" %>
 
