an extra nested route is working, by adding current_user to startups

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,5 +4,5 @@
 
 <p>Startups:</p>
 <% @category.startups.each do |startup| %>
-<div><%= link_to startup.company, startup_path(startup) %></div>
+<div><%= link_to startup.company, category_startup_path(startup.category, startup) %></div>
 <% end %>
