--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,11 +1,7 @@
-<h1>Welcome to Ordinary Startups  </h1>
+<div class="img"><h1>Welcome to Ordinary Startups  </h1>
 <h2>Discover innovative solutions and avant-garde technology in the world of high tech startups. </h2>  
 
-<h1>World of Startups</h1>
-
-
-<%#= background-image: url('img_2'.jpg) %>
-
+<h1>World of Startups</h1></div>
 
 
 
