deployment to heroku

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,6 +1,5 @@
 body {
-    background-image: url("img_3.jpg");
-    background-repeat: no-repeat, repeat;
+    background-image: url("s3://ordinarystartups/franck-v-zbLW0FG8XU8-unsplash_jcgjn3.jpg");
     background-size: cover;
     background-color: transparent;
     color:black;
